kubernetes/projects/apps/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  parentRefs:
  - name: axolotl
    namespace: istio-ingress
  hostnames:
  - prowlarr.axolotl.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prowlarr
      port: 80
